--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="wrapper">
        <main class="page">
-           @@include('./_header.html')
+           @@include('./html/_header.html')
            <div class="main-screen">
                 <div class="main-screen__bg ibg">
                     <img src="img/main_section/main_bg.jpg" alt="">
                 </div>
            </div>
-           @@include('./_footer.html')
+           @@include('./html/_footer.html')
            <div class="content">
                 <section class="generation">
                     <div class="container">
